@@ -1,7 +1,7 @@
 package guru.springframework.spring6restmvc.controller;
 
 import org.springframework.http.ResponseEntity;
-import org.springframework.validation.FieldError;
+import org.springframework.transaction.TransactionSystemException;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
@@ -9,19 +9,28 @@ import org.springframework.web.bind.annotation.ExceptionHandler;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
+/**
+ * Created by jt, Spring Framework Guru.
+ */
 @ControllerAdvice
 public class CustomErrorController {
 
-    @ExceptionHandler(MethodArgumentNotValidException.class)
-    ResponseEntity<List<?>> handleBindErrors(MethodArgumentNotValidException exception){
+    @ExceptionHandler
+    ResponseEntity handleJPAViolations(TransactionSystemException exception){
+        return ResponseEntity.badRequest().build();
+    }
 
-        List<?> errorList = exception.getFieldErrors().stream()
+    @ExceptionHandler(MethodArgumentNotValidException.class)
+    ResponseEntity handleBindErrors(MethodArgumentNotValidException exception){
+
+        List errorList = exception.getFieldErrors().stream()
                 .map(fieldError -> {
-                    Map<String, String> errorMap = new HashMap<>();
+                    Map<String, String > errorMap = new HashMap<>();
                     errorMap.put(fieldError.getField(), fieldError.getDefaultMessage());
                     return errorMap;
-                }).toList();
+                }).collect(Collectors.toList());
 
         return ResponseEntity.badRequest().body(errorList);
     }
